Updated the test cases and countable number generator for duplicate pdf file